syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.eduardordguez.proto";
option java_outer_classname = "GreeterProto";

service GreeterService {
  rpc Greet (GreetRequest) returns (GreetResponse) {}
}

message GreetRequest {
  string name = 1;
}

message GreetResponse {
  string message = 1;
}